fixed logo display error on small display
float w to left

--- a/style.css
+++ b/style.css
@@ -116,10 +116,7 @@ header {
 
 .m {
 	color: #333332;
-}
-
-.w {
-	margin-left: -4px;
+	float: left;
 }
 
 #m-abbr {
